Email-System/cd/k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  name: email-email
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: rate-limiting,request-size-limiting,servie-ip-restriction, prometheus
spec:
  ingressClassName: kong
  rules:
    - host: servicetest.jebsen.com
      http:
        paths:
          - backend:
              service:
                name: email-email
                port:
                  name: http
            path: /email-email
            pathType: ImplementationSpecific
